--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.15",
-    "react-router-dom": "^5.2.0"
+    "axios": "0.21.0"
   }
 }
