--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.15",
-    "axios": "0.21.0",
+    "axios": "^0.21.0",
     "concurrently": "^4.1.0"
   }
 }
