--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.10.15",
     "axios": "^0.21.0",
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.10.15"
   }
 }
